[gd_scene load_steps=11 format=3 uid="uid://ctgdutbn6bupg"]

[ext_resource type="Script" uid="uid://c0u6q7o25ig2n" path="res://battle_fsm.gd" id="1_0npn6"]
[ext_resource type="Script" uid="uid://x54cahucvw3o" path="res://battle.gd" id="1_7sfm4"]
[ext_resource type="PackedScene" uid="uid://qv5s1m5pasu7" path="res://player.tscn" id="1_oxp8w"]
[ext_resource type="PackedScene" uid="uid://tmhb4sn55qm1" path="res://cog.tscn" id="2_7sfm4"]
[ext_resource type="Texture2D" uid="uid://bp3f1pp2b0rj7" path="res://pie.png" id="4_6t8i5"]
[ext_resource type="Texture2D" uid="uid://bpe6breyk8m3y" path="res://cog_attack.png" id="5_dw4jg"]
[ext_resource type="Texture2D" uid="uid://d4buwalgrugji" path="res://squirtflower.webp" id="6_0npn6"]
[ext_resource type="Texture2D" uid="uid://3kegcnfxlhdn" path="res://waterspray.png" id="7_mhv3b"]

[sub_resource type="Curve2D" id="Curve2D_6t8i5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 151, 295, 0, 0, 0, 0, 357, 229, 0, 0, 0, 0, 545, 200, 0, 0, 0, 0, 734, 226, 0, 0, 0, 0, 948, 290)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_dw4jg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 963, 288, 0, 0, 0, 0, 156, 290)
}
point_count = 2

[node name="Battle" type="Node"]
script = ExtResource("1_7sfm4")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1_0npn6")
metadata/_custom_type_script = "uid://b0pbhcalup7wq"

[node name="Player" parent="." instance=ExtResource("1_oxp8w")]
position = Vector2(150, 289)
scale = Vector2(1.81642, 1.67381)

[node name="Cog" parent="." instance=ExtResource("2_7sfm4")]
position = Vector2(955, 273)
scale = Vector2(1.57392, 1.44564)

[node name="BattleUI" type="CanvasLayer" parent="."]

[node name="ThrowButton" type="Button" parent="BattleUI"]
offset_left = 290.0
offset_top = 400.0
offset_right = 510.0
offset_bottom = 499.0
theme_override_font_sizes/font_size = 64
text = "Throw"

[node name="SquirtButton" type="Button" parent="BattleUI"]
offset_left = 614.0
offset_top = 399.0
offset_right = 814.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 64
text = "Squirt"

[node name="Damage" type="Label" parent="BattleUI"]
offset_left = 543.0
offset_top = 109.0
offset_right = 583.0
offset_bottom = 197.0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="PlayerHealth" type="Label" parent="BattleUI"]
offset_left = 145.0
offset_top = 93.0
offset_right = 185.0
offset_bottom = 181.0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="CogHealth" type="Label" parent="BattleUI"]
offset_left = 974.0
offset_top = 99.0
offset_right = 1014.0
offset_bottom = 187.0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="ThrowInventory" type="Label" parent="BattleUI"]
offset_left = 382.0
offset_top = 503.0
offset_right = 422.0
offset_bottom = 591.0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="SquirtInventory" type="Label" parent="BattleUI"]
offset_left = 700.0
offset_top = 501.0
offset_right = 740.0
offset_bottom = 589.0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="CurState" type="Label" parent="BattleUI"]
visible = false
offset_left = 9.0
offset_top = 559.0
offset_right = 292.0
offset_bottom = 647.0
theme_override_font_sizes/font_size = 64
text = "cur_state"

[node name="Title" type="Label" parent="BattleUI"]
offset_left = 271.0
offset_top = 19.0
offset_right = 855.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 64
text = "DESTROY NICOLE!!!"

[node name="AttackGraphics" type="CanvasLayer" parent="."]

[node name="Pie" type="Sprite2D" parent="AttackGraphics"]
position = Vector2(190, 296)
rotation = 1.11027
scale = Vector2(0.196875, 0.216755)
texture = ExtResource("4_6t8i5")

[node name="Gear" type="Sprite2D" parent="AttackGraphics"]
position = Vector2(946, 286)
scale = Vector2(0.160991, 0.147239)
texture = ExtResource("5_dw4jg")

[node name="PiePath" type="Path2D" parent="AttackGraphics"]
curve = SubResource("Curve2D_6t8i5")

[node name="PieSpawn" type="PathFollow2D" parent="AttackGraphics/PiePath"]
position = Vector2(151, 295)
rotation = -0.310055

[node name="GearPath" type="Path2D" parent="AttackGraphics"]
curve = SubResource("Curve2D_dw4jg")

[node name="GearSpawn" type="PathFollow2D" parent="AttackGraphics/GearPath"]
position = Vector2(963, 288)
rotation = 3.13911

[node name="Squirt" type="Node" parent="AttackGraphics"]

[node name="Flower" type="Sprite2D" parent="AttackGraphics/Squirt"]
position = Vector2(201, 311)
scale = Vector2(0.338889, 0.323529)
texture = ExtResource("6_0npn6")

[node name="Splash" type="Sprite2D" parent="AttackGraphics/Squirt"]
position = Vector2(252, 285)
texture = ExtResource("7_mhv3b")

[node name="StartUI" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="StartUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = -74.0
offset_right = 128.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="Title" type="Label" parent="StartUI"]
offset_left = 245.0
offset_top = 57.0
offset_right = 901.0
offset_bottom = 236.0
theme_override_font_sizes/font_size = 64
text = "Nicoles mad again...
Time to deal with her"

[node name="WinUI" type="CanvasLayer" parent="."]
visible = false

[node name="WinText" type="Label" parent="WinUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -266.0
offset_top = 47.0
offset_right = 266.0
offset_bottom = 135.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "YOU HAVE WON!!"

[node name="ThrowXP" type="Label" parent="WinUI"]
offset_left = 319.0
offset_top = 219.0
offset_right = 816.0
offset_bottom = 307.0
theme_override_font_sizes/font_size = 64
text = "Throw XP: 5/100"

[node name="SquirtXP" type="Label" parent="WinUI"]
offset_left = 323.0
offset_top = 299.0
offset_right = 820.0
offset_bottom = 387.0
theme_override_font_sizes/font_size = 64
text = "Squirt XP: 5/100"

[node name="PlayAgainButton" type="Button" parent="WinUI"]
offset_left = 358.0
offset_top = 427.0
offset_right = 770.0
offset_bottom = 554.0
theme_override_font_sizes/font_size = 64
text = "Play Again"

[connection signal="pressed" from="BattleUI/ThrowButton" to="." method="_on_throw_button_pressed"]
[connection signal="pressed" from="BattleUI/SquirtButton" to="." method="_on_squirt_button_pressed"]
[connection signal="pressed" from="StartUI/Button" to="." method="_start_button_pressed"]
[connection signal="pressed" from="WinUI/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
